[TabManager] fixing comment at DiscardTabById function.

BUG=618338

Review-Url: https://codereview.chromium.org/2047283004
Cr-Commit-Position: refs/heads/master@{#399538}

Former-commit-id: d4994a98367c4d08916fc77f69c62d68e4c3846b